objects/TestCaseStep__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <description>This field is created to write what is the actual results that we got.</description>
        <label>Actual Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is created to write any comments.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <description>This field is created to write what we will expect the results will be.</description>
        <label>Expected Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>This field is used to enter the number of steps.</description>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect #</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test Case Steps</relationshipLabel>
        <relationshipName>Test_Case_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>SFDC_Test_Case__c</referenceTo>
        <relationshipLabel>Test Case Steps</relationshipLabel>
        <relationshipName>Test_Case_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Test_Step_Description__c</fullName>
        <description>This field is created to type the description of the steps that been achieved.</description>
        <label>Test Step Description</label>
        <type>TextArea</type>
    </fields>
    <label>Test Case Steps</label>
    <nameField>
        <label>Step#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Case Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>